cpp/c-api/include/dnv/vista/sdk/c/transport/datachannel/data_channel.h

    typedef struct dnv_vista_sdk_dcl_name_object dnv_vista_sdk_dcl_name_object_t;
    typedef struct dnv_vista_sdk_dcl_property dnv_vista_sdk_dcl_property_t;
    typedef struct dnv_vista_sdk_dcl_configuration_reference dnv_vista_sdk_dcl_configuration_reference_t;
    typedef struct dnv_vista_sdk_dcl_version_information dnv_vista_sdk_dcl_version_information_t;
    typedef struct dnv_vista_sdk_dcl_channel_id dnv_vista_sdk_dcl_channel_id_t;
    typedef struct dnv_vista_sdk_dcl_header dnv_vista_sdk_dcl_header_t;
    typedef struct dnv_vista_sdk_dcl_data_channel dnv_vista_sdk_dcl_data_channel_t;
    typedef struct dnv_vista_sdk_dcl_data_channel_list dnv_vista_sdk_dcl_data_channel_list_t;
    typedef struct dnv_vista_sdk_dcl_package dnv_vista_sdk_dcl_package_t;
    typedef struct dnv_vista_sdk_dcl_list_package dnv_vista_sdk_dcl_list_package_t;
    DNV_VISTA_SDK_C_API dnv_vista_sdk_dcl_version_information_t* dnv_vista_sdk_dcl_version_information_create_default(
        void);
    DNV_VISTA_SDK_C_API dnv_vista_sdk_dcl_version_information_t* dnv_vista_sdk_dcl_version_information_create(
        const char* namingRule, const char* namingSchemeVersion);
    DNV_VISTA_SDK_C_API void dnv_vista_sdk_dcl_version_information_free(
        dnv_vista_sdk_dcl_version_information_t* versionInfo);
    DNV_VISTA_SDK_C_API const char* dnv_vista_sdk_dcl_version_information_naming_rule(
        const dnv_vista_sdk_dcl_version_information_t* versionInfo);
    DNV_VISTA_SDK_C_API void dnv_vista_sdk_dcl_version_information_set_naming_rule(
        dnv_vista_sdk_dcl_version_information_t* versionInfo, const char* namingRule);
    DNV_VISTA_SDK_C_API const char* dnv_vista_sdk_dcl_version_information_naming_scheme_version(
        const dnv_vista_sdk_dcl_version_information_t* versionInfo);
    DNV_VISTA_SDK_C_API void dnv_vista_sdk_dcl_version_information_set_naming_scheme_version(
        dnv_vista_sdk_dcl_version_information_t* versionInfo, const char* namingSchemeVersion);
    DNV_VISTA_SDK_C_API const char* dnv_vista_sdk_dcl_version_information_reference_url(
        const dnv_vista_sdk_dcl_version_information_t* versionInfo);
    DNV_VISTA_SDK_C_API void dnv_vista_sdk_dcl_version_information_set_reference_url(
        dnv_vista_sdk_dcl_version_information_t* versionInfo, const char* referenceUrl);
    DNV_VISTA_SDK_C_API void dnv_vista_sdk_dcl_version_information_clear_reference_url(
        dnv_vista_sdk_dcl_version_information_t* versionInfo);
    DNV_VISTA_SDK_C_API dnv_vista_sdk_dcl_channel_id_t* dnv_vista_sdk_dcl_channel_id_create(
        const dnv_vista_sdk_local_id_t* localId);
    DNV_VISTA_SDK_C_API void dnv_vista_sdk_dcl_channel_id_free(dnv_vista_sdk_dcl_channel_id_t* channelId);
    DNV_VISTA_SDK_C_API const dnv_vista_sdk_local_id_t* dnv_vista_sdk_dcl_channel_id_local_id(
        const dnv_vista_sdk_dcl_channel_id_t* channelId);
    DNV_VISTA_SDK_C_API void dnv_vista_sdk_dcl_channel_id_set_local_id(
        dnv_vista_sdk_dcl_channel_id_t* channelId, const dnv_vista_sdk_local_id_t* localId);
    DNV_VISTA_SDK_C_API const char* dnv_vista_sdk_dcl_channel_id_short_id(
        const dnv_vista_sdk_dcl_channel_id_t* channelId);
    DNV_VISTA_SDK_C_API void dnv_vista_sdk_dcl_channel_id_set_short_id(
        dnv_vista_sdk_dcl_channel_id_t* channelId, const char* shortId);
    DNV_VISTA_SDK_C_API void dnv_vista_sdk_dcl_channel_id_clear_short_id(dnv_vista_sdk_dcl_channel_id_t* channelId);
    DNV_VISTA_SDK_C_API const dnv_vista_sdk_dcl_name_object_t* dnv_vista_sdk_dcl_channel_id_name_object(
        const dnv_vista_sdk_dcl_channel_id_t* channelId);
    DNV_VISTA_SDK_C_API void dnv_vista_sdk_dcl_channel_id_set_name_object(
        dnv_vista_sdk_dcl_channel_id_t* channelId, const dnv_vista_sdk_dcl_name_object_t* nameObject);
    DNV_VISTA_SDK_C_API void dnv_vista_sdk_dcl_channel_id_clear_name_object(dnv_vista_sdk_dcl_channel_id_t* channelId);
    DNV_VISTA_SDK_C_API dnv_vista_sdk_dcl_header_t* dnv_vista_sdk_dcl_header_create(
        const dnv_vista_sdk_ship_id_t* shipId, const dnv_vista_sdk_dcl_configuration_reference_t* dataChannelListId);
    DNV_VISTA_SDK_C_API void dnv_vista_sdk_dcl_header_free(dnv_vista_sdk_dcl_header_t* header);
    DNV_VISTA_SDK_C_API const dnv_vista_sdk_ship_id_t* dnv_vista_sdk_dcl_header_ship_id(
        const dnv_vista_sdk_dcl_header_t* header);
    DNV_VISTA_SDK_C_API void dnv_vista_sdk_dcl_header_set_ship_id(
        dnv_vista_sdk_dcl_header_t* header, const dnv_vista_sdk_ship_id_t* shipId);
    DNV_VISTA_SDK_C_API const dnv_vista_sdk_dcl_configuration_reference_t*
    dnv_vista_sdk_dcl_header_data_channel_list_id(const dnv_vista_sdk_dcl_header_t* header);
    DNV_VISTA_SDK_C_API void dnv_vista_sdk_dcl_header_set_data_channel_list_id(
        dnv_vista_sdk_dcl_header_t* header, const dnv_vista_sdk_dcl_configuration_reference_t* dataChannelListId);
    DNV_VISTA_SDK_C_API const dnv_vista_sdk_dcl_version_information_t* dnv_vista_sdk_dcl_header_version_information(
        const dnv_vista_sdk_dcl_header_t* header);
    DNV_VISTA_SDK_C_API void dnv_vista_sdk_dcl_header_set_version_information(
        dnv_vista_sdk_dcl_header_t* header, const dnv_vista_sdk_dcl_version_information_t* versionInformation);
    DNV_VISTA_SDK_C_API void dnv_vista_sdk_dcl_header_clear_version_information(dnv_vista_sdk_dcl_header_t* header);
    DNV_VISTA_SDK_C_API const char* dnv_vista_sdk_dcl_header_author(const dnv_vista_sdk_dcl_header_t* header);
    DNV_VISTA_SDK_C_API void dnv_vista_sdk_dcl_header_set_author(
        dnv_vista_sdk_dcl_header_t* header, const char* author);
    DNV_VISTA_SDK_C_API void dnv_vista_sdk_dcl_header_clear_author(dnv_vista_sdk_dcl_header_t* header);
    DNV_VISTA_SDK_C_API int dnv_vista_sdk_dcl_header_has_date_created(const dnv_vista_sdk_dcl_header_t* header);
    DNV_VISTA_SDK_C_API dnv_vista_sdk_date_time_offset_t
    dnv_vista_sdk_dcl_header_date_created(const dnv_vista_sdk_dcl_header_t* header);
    DNV_VISTA_SDK_C_API void dnv_vista_sdk_dcl_header_set_date_created(
        dnv_vista_sdk_dcl_header_t* header, dnv_vista_sdk_date_time_offset_t dateCreated);
    DNV_VISTA_SDK_C_API void dnv_vista_sdk_dcl_header_clear_date_created(dnv_vista_sdk_dcl_header_t* header);
    DNV_VISTA_SDK_C_API const dnv_vista_sdk_serializable_document_t* dnv_vista_sdk_dcl_header_custom_headers(
        const dnv_vista_sdk_dcl_header_t* header);
    DNV_VISTA_SDK_C_API void dnv_vista_sdk_dcl_header_set_custom_headers(
        dnv_vista_sdk_dcl_header_t* header, dnv_vista_sdk_serializable_document_t* value);
    DNV_VISTA_SDK_C_API void dnv_vista_sdk_dcl_header_clear_custom_headers(dnv_vista_sdk_dcl_header_t* header);
    DNV_VISTA_SDK_C_API dnv_vista_sdk_dcl_data_channel_t* dnv_vista_sdk_dcl_data_channel_create(
        const dnv_vista_sdk_dcl_channel_id_t* channelId, const dnv_vista_sdk_dcl_property_t* property);
    DNV_VISTA_SDK_C_API void dnv_vista_sdk_dcl_data_channel_free(dnv_vista_sdk_dcl_data_channel_t* dataChannel);
    DNV_VISTA_SDK_C_API const dnv_vista_sdk_dcl_channel_id_t* dnv_vista_sdk_dcl_data_channel_channel_id(
        const dnv_vista_sdk_dcl_data_channel_t* dataChannel);
    DNV_VISTA_SDK_C_API void dnv_vista_sdk_dcl_data_channel_set_channel_id(
        dnv_vista_sdk_dcl_data_channel_t* dataChannel, const dnv_vista_sdk_dcl_channel_id_t* channelId);
    DNV_VISTA_SDK_C_API const dnv_vista_sdk_dcl_property_t* dnv_vista_sdk_dcl_data_channel_property(
        const dnv_vista_sdk_dcl_data_channel_t* dataChannel);
    DNV_VISTA_SDK_C_API int dnv_vista_sdk_dcl_data_channel_set_property(
        dnv_vista_sdk_dcl_data_channel_t* dataChannel, const dnv_vista_sdk_dcl_property_t* property);
    DNV_VISTA_SDK_C_API dnv_vista_sdk_dcl_data_channel_list_t* dnv_vista_sdk_dcl_data_channel_list_create(void);
    DNV_VISTA_SDK_C_API void dnv_vista_sdk_dcl_data_channel_list_free(dnv_vista_sdk_dcl_data_channel_list_t* list);
    DNV_VISTA_SDK_C_API size_t
    dnv_vista_sdk_dcl_data_channel_list_size(const dnv_vista_sdk_dcl_data_channel_list_t* list);
    DNV_VISTA_SDK_C_API const dnv_vista_sdk_dcl_data_channel_t* dnv_vista_sdk_dcl_data_channel_list_at(
        const dnv_vista_sdk_dcl_data_channel_list_t* list, size_t index);
    DNV_VISTA_SDK_C_API const dnv_vista_sdk_dcl_data_channel_t* dnv_vista_sdk_dcl_data_channel_list_from_short_id(
        const dnv_vista_sdk_dcl_data_channel_list_t* list, const char* shortId);
    DNV_VISTA_SDK_C_API const dnv_vista_sdk_dcl_data_channel_t* dnv_vista_sdk_dcl_data_channel_list_from_local_id(
        const dnv_vista_sdk_dcl_data_channel_list_t* list, const dnv_vista_sdk_local_id_t* localId);
    DNV_VISTA_SDK_C_API int dnv_vista_sdk_dcl_data_channel_list_add(
        dnv_vista_sdk_dcl_data_channel_list_t* list, const dnv_vista_sdk_dcl_data_channel_t* dataChannel);
    DNV_VISTA_SDK_C_API int dnv_vista_sdk_dcl_data_channel_list_remove(
        dnv_vista_sdk_dcl_data_channel_list_t* list, const dnv_vista_sdk_dcl_data_channel_t* item);
    DNV_VISTA_SDK_C_API void dnv_vista_sdk_dcl_data_channel_list_clear(dnv_vista_sdk_dcl_data_channel_list_t* list);
    DNV_VISTA_SDK_C_API dnv_vista_sdk_dcl_package_t* dnv_vista_sdk_dcl_package_create(
        const dnv_vista_sdk_dcl_header_t* header, const dnv_vista_sdk_dcl_data_channel_list_t* dataChannelList);
    DNV_VISTA_SDK_C_API void dnv_vista_sdk_dcl_package_free(dnv_vista_sdk_dcl_package_t* package);
    DNV_VISTA_SDK_C_API const dnv_vista_sdk_dcl_header_t* dnv_vista_sdk_dcl_package_header(
        const dnv_vista_sdk_dcl_package_t* package);
    DNV_VISTA_SDK_C_API void dnv_vista_sdk_dcl_package_set_header(
        dnv_vista_sdk_dcl_package_t* package, const dnv_vista_sdk_dcl_header_t* header);
    DNV_VISTA_SDK_C_API const dnv_vista_sdk_dcl_data_channel_list_t* dnv_vista_sdk_dcl_package_data_channel_list(
        const dnv_vista_sdk_dcl_package_t* package);
    DNV_VISTA_SDK_C_API void dnv_vista_sdk_dcl_package_set_data_channel_list(
        dnv_vista_sdk_dcl_package_t* package, const dnv_vista_sdk_dcl_data_channel_list_t* dataChannelList);
    DNV_VISTA_SDK_C_API dnv_vista_sdk_dcl_list_package_t* dnv_vista_sdk_dcl_list_package_create(
        const dnv_vista_sdk_dcl_package_t* package);
    DNV_VISTA_SDK_C_API void dnv_vista_sdk_dcl_list_package_free(dnv_vista_sdk_dcl_list_package_t* listPackage);
    DNV_VISTA_SDK_C_API const dnv_vista_sdk_dcl_package_t* dnv_vista_sdk_dcl_list_package_package(
        const dnv_vista_sdk_dcl_list_package_t* listPackage);
    DNV_VISTA_SDK_C_API void dnv_vista_sdk_dcl_list_package_set_package(
        dnv_vista_sdk_dcl_list_package_t* listPackage, const dnv_vista_sdk_dcl_package_t* package);
    DNV_VISTA_SDK_C_API const dnv_vista_sdk_dcl_data_channel_list_t* dnv_vista_sdk_dcl_list_package_data_channel_list(
        const dnv_vista_sdk_dcl_list_package_t* listPackage);