bindings/rust/vista-sdk/src/ffi/transport/datachannel/data_channel.rs


    // VersionInformation
    pub(crate) fn dnv_vista_sdk_dcl_version_information_create_default(
    ) -> *mut dnv_vista_sdk_dcl_version_information_t;
    pub(crate) fn dnv_vista_sdk_dcl_version_information_create(
        naming_rule: *const std::ffi::c_char,
        naming_scheme_version: *const std::ffi::c_char,
    ) -> *mut dnv_vista_sdk_dcl_version_information_t;
    pub(crate) fn dnv_vista_sdk_dcl_version_information_free(
        version_info: *mut dnv_vista_sdk_dcl_version_information_t,
    );
    pub(crate) fn dnv_vista_sdk_dcl_version_information_naming_rule(
        version_info: *const dnv_vista_sdk_dcl_version_information_t,
    ) -> *const std::ffi::c_char;
    pub(crate) fn dnv_vista_sdk_dcl_version_information_set_naming_rule(
        version_info: *mut dnv_vista_sdk_dcl_version_information_t,
        naming_rule: *const std::ffi::c_char,
    );
    pub(crate) fn dnv_vista_sdk_dcl_version_information_naming_scheme_version(
        version_info: *const dnv_vista_sdk_dcl_version_information_t,
    ) -> *const std::ffi::c_char;
    pub(crate) fn dnv_vista_sdk_dcl_version_information_set_naming_scheme_version(
        version_info: *mut dnv_vista_sdk_dcl_version_information_t,
        naming_scheme_version: *const std::ffi::c_char,
    );
    pub(crate) fn dnv_vista_sdk_dcl_version_information_reference_url(
        version_info: *const dnv_vista_sdk_dcl_version_information_t,
    ) -> *const std::ffi::c_char;
    pub(crate) fn dnv_vista_sdk_dcl_version_information_set_reference_url(
        version_info: *mut dnv_vista_sdk_dcl_version_information_t,
        reference_url: *const std::ffi::c_char,
    );
    pub(crate) fn dnv_vista_sdk_dcl_version_information_clear_reference_url(
        version_info: *mut dnv_vista_sdk_dcl_version_information_t,
    );

    // DataChannelId (dcl::DataChannelId, Table 15)
    pub(crate) fn dnv_vista_sdk_dcl_channel_id_create(
        local_id: *const dnv_vista_sdk_local_id_t,
    ) -> *mut dnv_vista_sdk_dcl_channel_id_t;
    pub(crate) fn dnv_vista_sdk_dcl_channel_id_free(
        channel_id: *mut dnv_vista_sdk_dcl_channel_id_t,
    );
    pub(crate) fn dnv_vista_sdk_dcl_channel_id_local_id(
        channel_id: *const dnv_vista_sdk_dcl_channel_id_t,
    ) -> *const dnv_vista_sdk_local_id_t;
    pub(crate) fn dnv_vista_sdk_dcl_channel_id_set_local_id(
        channel_id: *mut dnv_vista_sdk_dcl_channel_id_t,
        local_id: *const dnv_vista_sdk_local_id_t,
    );
    pub(crate) fn dnv_vista_sdk_dcl_channel_id_short_id(
        channel_id: *const dnv_vista_sdk_dcl_channel_id_t,
    ) -> *const std::ffi::c_char;
    pub(crate) fn dnv_vista_sdk_dcl_channel_id_set_short_id(
        channel_id: *mut dnv_vista_sdk_dcl_channel_id_t,
        short_id: *const std::ffi::c_char,
    );
    pub(crate) fn dnv_vista_sdk_dcl_channel_id_clear_short_id(
        channel_id: *mut dnv_vista_sdk_dcl_channel_id_t,
    );
    pub(crate) fn dnv_vista_sdk_dcl_channel_id_name_object(
        channel_id: *const dnv_vista_sdk_dcl_channel_id_t,
    ) -> *const dnv_vista_sdk_dcl_name_object_t;
    pub(crate) fn dnv_vista_sdk_dcl_channel_id_set_name_object(
        channel_id: *mut dnv_vista_sdk_dcl_channel_id_t,
        name_object: *const dnv_vista_sdk_dcl_name_object_t,
    );
    pub(crate) fn dnv_vista_sdk_dcl_channel_id_clear_name_object(
        channel_id: *mut dnv_vista_sdk_dcl_channel_id_t,
    );

    // Header
    pub(crate) fn dnv_vista_sdk_dcl_header_create(
        ship_id: *const dnv_vista_sdk_ship_id_t,
        data_channel_list_id: *const dnv_vista_sdk_dcl_configuration_reference_t,
    ) -> *mut dnv_vista_sdk_dcl_header_t;
    pub(crate) fn dnv_vista_sdk_dcl_header_free(header: *mut dnv_vista_sdk_dcl_header_t);
    pub(crate) fn dnv_vista_sdk_dcl_header_ship_id(
        header: *const dnv_vista_sdk_dcl_header_t,
    ) -> *const dnv_vista_sdk_ship_id_t;
    pub(crate) fn dnv_vista_sdk_dcl_header_set_ship_id(
        header: *mut dnv_vista_sdk_dcl_header_t,
        ship_id: *const dnv_vista_sdk_ship_id_t,
    );
    pub(crate) fn dnv_vista_sdk_dcl_header_data_channel_list_id(
        header: *const dnv_vista_sdk_dcl_header_t,
    ) -> *const dnv_vista_sdk_dcl_configuration_reference_t;
    pub(crate) fn dnv_vista_sdk_dcl_header_set_data_channel_list_id(
        header: *mut dnv_vista_sdk_dcl_header_t,
        data_channel_list_id: *const dnv_vista_sdk_dcl_configuration_reference_t,
    );
    pub(crate) fn dnv_vista_sdk_dcl_header_version_information(
        header: *const dnv_vista_sdk_dcl_header_t,
    ) -> *const dnv_vista_sdk_dcl_version_information_t;
    pub(crate) fn dnv_vista_sdk_dcl_header_set_version_information(
        header: *mut dnv_vista_sdk_dcl_header_t,
        version_information: *const dnv_vista_sdk_dcl_version_information_t,
    );
    pub(crate) fn dnv_vista_sdk_dcl_header_clear_version_information(
        header: *mut dnv_vista_sdk_dcl_header_t,
    );
    pub(crate) fn dnv_vista_sdk_dcl_header_author(
        header: *const dnv_vista_sdk_dcl_header_t,
    ) -> *const std::ffi::c_char;
    pub(crate) fn dnv_vista_sdk_dcl_header_set_author(
        header: *mut dnv_vista_sdk_dcl_header_t,
        author: *const std::ffi::c_char,
    );
    pub(crate) fn dnv_vista_sdk_dcl_header_clear_author(header: *mut dnv_vista_sdk_dcl_header_t);
    pub(crate) fn dnv_vista_sdk_dcl_header_has_date_created(
        header: *const dnv_vista_sdk_dcl_header_t,
    ) -> i32;
    pub(crate) fn dnv_vista_sdk_dcl_header_date_created(
        header: *const dnv_vista_sdk_dcl_header_t,
    ) -> dnv_vista_sdk_date_time_offset_t;
    pub(crate) fn dnv_vista_sdk_dcl_header_set_date_created(
        header: *mut dnv_vista_sdk_dcl_header_t,
        date_created: dnv_vista_sdk_date_time_offset_t,
    );
    pub(crate) fn dnv_vista_sdk_dcl_header_clear_date_created(
        header: *mut dnv_vista_sdk_dcl_header_t,
    );
    pub(crate) fn dnv_vista_sdk_dcl_header_custom_headers(
        header: *const dnv_vista_sdk_dcl_header_t,
    ) -> *const dnv_vista_sdk_serializable_document_t;
    pub(crate) fn dnv_vista_sdk_dcl_header_set_custom_headers(
        header: *mut dnv_vista_sdk_dcl_header_t,
        value: *mut dnv_vista_sdk_serializable_document_t,
    );
    pub(crate) fn dnv_vista_sdk_dcl_header_clear_custom_headers(
        header: *mut dnv_vista_sdk_dcl_header_t,
    );

    // DataChannel
    pub(crate) fn dnv_vista_sdk_dcl_data_channel_create(
        channel_id: *const dnv_vista_sdk_dcl_channel_id_t,
        property: *const dnv_vista_sdk_dcl_property_t,
    ) -> *mut dnv_vista_sdk_dcl_data_channel_t;
    pub(crate) fn dnv_vista_sdk_dcl_data_channel_free(
        data_channel: *mut dnv_vista_sdk_dcl_data_channel_t,
    );
    pub(crate) fn dnv_vista_sdk_dcl_data_channel_channel_id(
        data_channel: *const dnv_vista_sdk_dcl_data_channel_t,
    ) -> *const dnv_vista_sdk_dcl_channel_id_t;
    pub(crate) fn dnv_vista_sdk_dcl_data_channel_set_channel_id(
        data_channel: *mut dnv_vista_sdk_dcl_data_channel_t,
        channel_id: *const dnv_vista_sdk_dcl_channel_id_t,
    );
    pub(crate) fn dnv_vista_sdk_dcl_data_channel_property(
        data_channel: *const dnv_vista_sdk_dcl_data_channel_t,
    ) -> *const dnv_vista_sdk_dcl_property_t;
    pub(crate) fn dnv_vista_sdk_dcl_data_channel_set_property(
        data_channel: *mut dnv_vista_sdk_dcl_data_channel_t,
        property: *const dnv_vista_sdk_dcl_property_t,
    ) -> i32;

    // DataChannelList
    pub(crate) fn dnv_vista_sdk_dcl_data_channel_list_create(
    ) -> *mut dnv_vista_sdk_dcl_data_channel_list_t;
    pub(crate) fn dnv_vista_sdk_dcl_data_channel_list_free(
        list: *mut dnv_vista_sdk_dcl_data_channel_list_t,
    );
    pub(crate) fn dnv_vista_sdk_dcl_data_channel_list_size(
        list: *const dnv_vista_sdk_dcl_data_channel_list_t,
    ) -> usize;
    pub(crate) fn dnv_vista_sdk_dcl_data_channel_list_at(
        list: *const dnv_vista_sdk_dcl_data_channel_list_t,
        index: usize,
    ) -> *const dnv_vista_sdk_dcl_data_channel_t;
    pub(crate) fn dnv_vista_sdk_dcl_data_channel_list_from_short_id(
        list: *const dnv_vista_sdk_dcl_data_channel_list_t,
        short_id: *const std::ffi::c_char,
    ) -> *const dnv_vista_sdk_dcl_data_channel_t;
    pub(crate) fn dnv_vista_sdk_dcl_data_channel_list_from_local_id(
        list: *const dnv_vista_sdk_dcl_data_channel_list_t,
        local_id: *const dnv_vista_sdk_local_id_t,
    ) -> *const dnv_vista_sdk_dcl_data_channel_t;
    pub(crate) fn dnv_vista_sdk_dcl_data_channel_list_add(
        list: *mut dnv_vista_sdk_dcl_data_channel_list_t,
        data_channel: *const dnv_vista_sdk_dcl_data_channel_t,
    ) -> i32;
    pub(crate) fn dnv_vista_sdk_dcl_data_channel_list_remove(
        list: *mut dnv_vista_sdk_dcl_data_channel_list_t,
        item: *const dnv_vista_sdk_dcl_data_channel_t,
    ) -> i32;
    pub(crate) fn dnv_vista_sdk_dcl_data_channel_list_clear(
        list: *mut dnv_vista_sdk_dcl_data_channel_list_t,
    );

    // Package
    pub(crate) fn dnv_vista_sdk_dcl_package_create(
        header: *const dnv_vista_sdk_dcl_header_t,
        data_channel_list: *const dnv_vista_sdk_dcl_data_channel_list_t,
    ) -> *mut dnv_vista_sdk_dcl_package_t;
    pub(crate) fn dnv_vista_sdk_dcl_package_free(package: *mut dnv_vista_sdk_dcl_package_t);
    pub(crate) fn dnv_vista_sdk_dcl_package_header(
        package: *const dnv_vista_sdk_dcl_package_t,
    ) -> *const dnv_vista_sdk_dcl_header_t;
    pub(crate) fn dnv_vista_sdk_dcl_package_set_header(
        package: *mut dnv_vista_sdk_dcl_package_t,
        header: *const dnv_vista_sdk_dcl_header_t,
    );
    pub(crate) fn dnv_vista_sdk_dcl_package_data_channel_list(
        package: *const dnv_vista_sdk_dcl_package_t,
    ) -> *const dnv_vista_sdk_dcl_data_channel_list_t;
    pub(crate) fn dnv_vista_sdk_dcl_package_set_data_channel_list(
        package: *mut dnv_vista_sdk_dcl_package_t,
        data_channel_list: *const dnv_vista_sdk_dcl_data_channel_list_t,
    );

    // DataChannelListPackage
    pub(crate) fn dnv_vista_sdk_dcl_list_package_create(
        package: *const dnv_vista_sdk_dcl_package_t,
    ) -> *mut dnv_vista_sdk_dcl_list_package_t;
    pub(crate) fn dnv_vista_sdk_dcl_list_package_free(
        list_package: *mut dnv_vista_sdk_dcl_list_package_t,
    );
    pub(crate) fn dnv_vista_sdk_dcl_list_package_package(
        list_package: *const dnv_vista_sdk_dcl_list_package_t,
    ) -> *const dnv_vista_sdk_dcl_package_t;
    pub(crate) fn dnv_vista_sdk_dcl_list_package_set_package(
        list_package: *mut dnv_vista_sdk_dcl_list_package_t,
        package: *const dnv_vista_sdk_dcl_package_t,
    );
    pub(crate) fn dnv_vista_sdk_dcl_list_package_data_channel_list(
        list_package: *const dnv_vista_sdk_dcl_list_package_t,
    ) -> *const dnv_vista_sdk_dcl_data_channel_list_t;

    // JSON serialization
    pub(crate) fn dnv_vista_sdk_dcl_list_package_from_json(
        json: *const std::ffi::c_char,
    ) -> *mut dnv_vista_sdk_dcl_list_package_t;
    pub(crate) fn dnv_vista_sdk_dcl_list_package_to_json(
        package: *const dnv_vista_sdk_dcl_list_package_t,
        pretty_print: std::ffi::c_int,
    ) -> *mut std::ffi::c_char;
}
